fix issue scrollbar

--- a/src/Grid.less
+++ b/src/Grid.less
@@ -24,7 +24,7 @@
 }
 
 .kuma-grid-content {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .kuma-grid-content-scroller {
